<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Nome do usuario -->
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_new_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_sign_up_nome_usuario"
            android:textSize="24sp"
            app:met_baseColor="@color/colorAccent"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"
            app:met_singleLineEllipsis="true" />

        <!-- Senha -->
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_sign_up_senha"
            android:inputType="textPassword"
            android:textSize="24sp"
            app:met_baseColor="@color/colorAccent"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"
            app:met_singleLineEllipsis="true" />

        <!-- Email -->
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_new_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_sign_up_email"
            android:inputType="textEmailAddress"
            android:textSize="24sp"
            app:met_baseColor="@color/colorAccent"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"
            app:met_singleLineEllipsis="true" />

    </LinearLayout>

</android.support.v7.widget.CardView>